Updated Dockerfile to add nodejs, npm, yarn, and cypress. Its a start.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,13 +2,17 @@ FROM ruby:2.3.8-slim-stretch
 LABEL author="David J Eddy <me@davidjeddy.com>"
 
 RUN apt-get update -y
-RUN apt-get update -y && apt-get install -y apt-transport-https libsqlite3-dev build-essential nodejs imagemagick
+RUN apt-get update -y && apt-get install -y apt-transport-https libsqlite3-dev build-essential nodejs imagemagick yarn
 RUN mkdir /app
 WORKDIR /app
 COPY ./ /app
 
+# install nodeJs, npm, and cypress
+RUN curl -sL https://deb.nodesource.com/setup_6.x | bash - && apt-get install -y nodejs && npm install --global yarn
+
 RUN  gem install bundle && bundle install
-RUN rake db:migrate && rake db:setup
+# RUN bundle exec spring binstub --all # maybe for Dev. Starts rails server for testing/rake etc
+# RUN rake db:migrate && rake db:setup # ./db/test.sqlite3 already exists
 
 RUN apt-get clean
 
