--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,34 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
-
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+--- 
+test: 
+  adapter: mysql2
+  encoding: utf8
+  pool: 5
+  host: <%= ENV['DB_TST_HOST'] %>
+  username: <%= ENV['DB_TST_PASS'] %>
+  password: <%= ENV['DB_TST_USER'] %>
+  port: <%= ENV['DB_TST_PORT'] %>
+  database: <%= ENV['DB_TST_SCHEMA'] %>
 
-test:
-  <<: *default
-  database: db/test.sqlite3
+development: 
+  adapter: mysql2
+  encoding: utf8
+  pool: 5
+  host: <%= ENV['DB_DEV_HOST'] %>
+  username: <%= ENV['DB_DEV_PASS'] %>
+  password: <%= ENV['DB_DEV_USER'] %>
+  port: <%= ENV['DB_DEV_PORT'] %>
+  database: <%= ENV['DB_DEV_SCHEMA'] %>
 
-development:
-   <<: *default
-   database: db/test.sqlite3
 
-production:
-  <<: *default
-  database: db/production.sqlite3
+production: 
+  adapter: mysql2
+  encoding: utf8
+  pool: 5
+  host: <%= ENV['DB_PRD_HOST'] %>
+  username: <%= ENV['DB_PRD_PASS'] %>
+  password: <%= ENV['DB_PRD_USER'] %>
+  port: <%= ENV['DB_PRD_PORT'] %>
+  database: <%= ENV['DB_PRD_SCHEMA'] %>
