--- a/config/database.yml
+++ b/config/database.yml
@@ -4,23 +4,31 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+# default: &default
+#   adapter: sqlite3
+#   pool: 5
+#   timeout: 5000
+
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  host: mariadb
+  username: root
+  password: password
+  encoding: utf8
   pool: 5
-  timeout: 5000
+  reconnect: true
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: connechub_test
 
 development:
-   <<: *default
-   database: db/test.sqlite3
-
+  <<: *default
+  database: connechub_dev
+  
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: connechub
