--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,17 @@
 # encapsulate strings in double quotes
 
 # Google services credentials
-GOOGLEANALYTICS="UA-00000000-0"
+GOOGLEANALYTICS="UA-000000000-1"
+
+# Database connection
+DB_HOST=""
+DB_PORT=""
+DB_USER=""
+DB_PASS=""
+
+DB_TST_SCHE=""
+DB_DEV_SCHE=""
+DB_PRD_SCHE=""
+
+# cookie secret key
+COOKIE_SECRET_KEY_BASE=""
