INIT add of Terraform and Ansible infra-strucutre automation. EC2, RDS, EIP, etc implimented. UPDATED documentation as relavent.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ bower.json
 
 # Ignore generated docs
 /docs/api/*
+
+#Ignore Terraform meta-data dir
+.terraform
+*.tfvars
+*.tfstate
+*.tfstate.*
