--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@ bower.json
 
 # Ignore generated docs
 /docs/api/*
+
+#Ignore Terraform meta-data dir
+.terraform
+*.tfvars
+*.tfstate
+*.tfstate.*
+*.plan
