--- a/docs/ansible/ror.yml
+++ b/docs/ansible/ror.yml
@@ -1,86 +1,85 @@
-# ansible/site.yml
 # Source: https://semaphoreci.com/community/tutorials/how-to-deploy-rails-applications-with-ansible-capistrano-and-semaphore
 ---
-- hosts: rails
-  remote_user: root
+- hosts: all
+  gather_facts: yes
   become: yes
   tasks:
-    - name: Update all packages to the latest version
+    - name: Update and upgrade apt packages
       apt:
-        upgrade: dist
-    - name: Install Ruby dependencies
-      apt:
-        name: "{{ item }}"
-      with_items:
-          - gcc
-          - autoconf
-          - bison
-          - build-essential
-          - libssl-dev
-          - libyaml-dev
-          - libreadline6-dev
-          - zlib1g-dev
-          - libncurses5-dev
-          - libffi-dev
-          - libgdbm3
-          - libgdbm-dev
-          - sqlite3
-          - libsqlite3-dev
-          - nodejs
-    - name: Download ruby-install
-      become: no
-      get_url:
-        url: https://github.com/postmodern/ruby-install/archive/v0.6.1.tar.gz
-        dest: /home/ubuntu/ruby-install-0.6.1.tar.gz
-    - name: Extract ruby-install tarball
-      become: no
-      unarchive:
-        src: /home/ubuntu/ruby-install-0.6.1.tar.gz
-        dest: /home/ubuntu
-        creates: /home/ubuntu/ruby-install-0.6.1
-        remote_src: yes
-    - name: Install ruby-install
-      make:
-        chdir: /home/ubuntu/ruby-install-0.6.1
-        target: install
-    - name: Install Ruby
-      become_user: deploy
-      command: /usr/local/bin/ruby-install --no-install-deps ruby 2.5.0
-      args:
-        creates: /home/deploy/.rubies/ruby-2.5.0
-    - name: Download chruby
-      become: no
-      get_url:
-        url: https://github.com/postmodern/chruby/archive/v0.3.9.tar.gz
-        dest: /home/ubuntu/chruby-0.3.9.tar.gz
-    - name: Extract chruby tarball
-      become: no
-      unarchive:
-        src: /home/ubuntu/chruby-0.3.9.tar.gz
-        dest: /home/ubuntu
-        creates: /home/ubuntu/chruby-0.3.9
-        remote_src: yes
-    - name: Install chruby
-      make:
-        chdir: /home/ubuntu/chruby-0.3.9
-        target: install
-    - name: Load chruby for deploy user
-      lineinfile:
-        path: /home/deploy/.bashrc
-        regexp: 'chruby.sh$'
-        line: 'source /usr/local/share/chruby/chruby.sh'
-        insertbefore: BOF
-    - name: Set ruby version for deploy user
-      lineinfile:
-        path: /home/deploy/.profile
-        regexp: '^chruby'
-        line: 'chruby ruby-2.5.0'
-    - name: Install bundler
-      become_user: deploy
-      command: 'chruby-exec ruby-2.5.0 -- gem install bundler'
-      args:
-        creates: /home/deploy/.gem/ruby/2.5.0/bin/bundle
-    - name: Install nginx
-      apt:
-        name: nginx
-        state: latest
+        upgrade: yes
+        update_cache: yes
+    # - name: Install NodeJs
+    #   shell: |
+    #     apt install nodejs
+    #     apt install npm
+    #     nodejs -v
+    #     npm -v
+    # - name: Configure the Yarn APT key
+    #   apt_key: url=https://dl.yarnpkg.com/debian/pubkey.gpg
+    # - name: install python 2
+    #   raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+  # - name: Update all packages to the latest version
+  #   apt:
+  #     update_cache: yes
+  #     upgrade: dist
+  # - name: Install system dependencies
+  #   apt:
+  #     name: "{{ item }}"
+  #     with_items:
+  #       git-core
+  #       curl
+  #       zlib1g-dev
+  #       build-essential
+  #       libssl-dev
+  #       libreadline-dev
+  #       libyaml-dev
+  #       libsqlite3-dev
+  #       sqlite3
+  #       libxml2-dev
+  #       libxslt1-dev
+  #       libcurl4-openssl-dev
+  #       software-properties-common
+  #       libffi-dev
+  #       nodejs
+  #       yarn
+  # - name: Download & rbenv
+  #   git:
+  #     repo: https://github.com/rbenv/rbenv.git
+  #     version: master
+  #     dest: ~/.rbenv
+  #     accept_hostkey: yes
+  #   become: no
+  # - name: Install rbenv
+  #   shell: |
+  #     echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
+  #     echo 'eval "$(rbenv init -)"' >> ~/.bashrc
+  #     exec $SHELL
+  # - name: Download Ruby
+  #   git:
+  #     repo: https://github.com/rbenv/ruby-build.git
+  #     version: master
+  #     dest: ~/.rbenv/plugins/ruby-build
+  #     accept_hostkey: yes
+  #   become: no
+  # - name: Install Ruby
+  #   shell: |
+  #     echo 'export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
+  #     exec $SHELL
+  #     rbenv install 2.6.1
+  #     rbenv global 2.6.1
+  #     gem install bundler
+  #     gem update --system
+  # - name: Install Rails
+  #   shell: |
+  #     gem install rails -v 5.2.2
+  #     rbenv rehash
+  # - name: Create Rails New App
+  #   shell: |
+  #     rails new app
+  #     cd app
+  #     bundle update
+  #     gem uninstall sqlite3 -v 1.4.0
+  #     sed -i -e "s/gem 'sqlite3'/gem 'sqlite3' , '~> 1.3.6'/g" Gemfile
+  #     bundle update
+  #     rake db:create
+  #     rails server
