ADDED remote state storage via AWS S3. CHANGED terraform.tf -> ...tags{}... keys to lower case.

--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,8 @@
 # encapsulate strings in double quotes
 
+APP_ENV=""
+APP_NAME=""
+
 # Google services credentials
 GOOGLEANALYTICS="UA-000000000-1"
 
