--- a/docs/ansible/ror.yml
+++ b/docs/ansible/ror.yml
@@ -1,35 +1,25 @@
 # Source: https://semaphoreci.com/community/tutorials/how-to-deploy-rails-applications-with-ansible-capistrano-and-semaphore
 ---
 - hosts: all
-  strategy: free
-  gather_facts: yes
-  become: yes
+  become: True
+  gather_facts: False
+  pre_tasks:
+    - name: Installing Python
+      become: False
+      raw: sudo apt autoremove -y && sudo apt-get install -y python-minimal python-setuptools
   tasks:
     - name: Update and upgrade apt packages
       apt:
-        upgrade: yes
-        update_cache: yes
-    - name: Configure the Yarn APT key
-      apt_key: url=https://dl.yarnpkg.com/debian/pubkey.gpg
-    - name: Install NodeJs
-      shell: |
-        apt remove --purge nodejs npm
-        apt clean
-        apt autoclean
-        apt install -f
-        apt autoremove
-
-        apt install -y nodejs
-        apt install -y npm
-
-        nodejs -v
-        npm -v
-    - name: install python 2
-      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
-    - name: Update all packages to the latest version
-      apt:
         update_cache: yes
         upgrade: dist
+    - name: Install NodeJs and npm
+      shell: |
+        apt-get remove --purge -y nodejs npm
+        apt-get clean
+        apt-get autoclean
+        apt-get install -f
+        apt-get autoremove
+        apt-get install -y nodejs nodejs-dev node-gyp libssl1.0-dev npm
     - name: Install system dependencies
       apt: name={{ item }} state=present
       with_items:
@@ -46,42 +36,55 @@
         - libcurl4-openssl-dev
         - software-properties-common
         - libffi-dev
-    - name: Download & rbenv
+        - htop
+    - name: Download rbenv
+      become: False
       git:
+        dest: ~/.rbenv  
+        force: yes
         repo: https://github.com/rbenv/rbenv.git
         version: master
-        dest: ~/.rbenv
-    # - name: Install rbenv
-    #   shell: |
-    #     echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
-    #     echo 'eval "$(rbenv init -)"' >> ~/.bashrc
-    #     exec $SHELL
-  # - name: Download Ruby
-  #   git:
-  #     repo: https://github.com/rbenv/ruby-build.git
-  #     version: master
-  #     dest: ~/.rbenv/plugins/ruby-build
-  #     accept_hostkey: yes
-  #   become: no
-  # - name: Install Ruby
-  #   shell: |
-  #     echo 'export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
-  #     exec $SHELL
-  #     rbenv install 2.6.1
-  #     rbenv global 2.6.1
-  #     gem install bundler
-  #     gem update --system
-  # - name: Install Rails
-  #   shell: |
-  #     gem install rails -v 5.2.2
-  #     rbenv rehash
-  # - name: Create Rails New App
-  #   shell: |
-  #     rails new app
-  #     cd app
-  #     bundle update
-  #     gem uninstall sqlite3 -v 1.4.0
-  #     sed -i -e "s/gem 'sqlite3'/gem 'sqlite3' , '~> 1.3.6'/g" Gemfile
-  #     bundle update
-  #     rake db:create
-  #     rails server
+    - name: Install rbenv
+      become: False
+      shell: |
+        echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
+        echo 'eval "$(rbenv init -)"' >> ~/.bashrc
+        exec $SHELL
+    - name: Download Ruby
+      become: False
+      git:
+        repo: https://github.com/rbenv/ruby-build.git
+        version: master
+        dest: ~/.rbenv/plugins/ruby-build
+        force: yes
+        accept_hostkey: yes
+    - name: Install Ruby
+      become: False
+      shell: |
+        echo 'export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
+        exec $SHELL
+        rbenv --version
+        rbenv install 2.6.1
+        rbenv global 2.6.1
+        gem install bundler
+        gem update --system
+    - name: Install Rails
+      become: False
+      shell: |
+        gem install rails -v 5.2.2
+        rbenv rehash
+    - name: Create Rails New App
+      become: False
+      shell: |
+        rails new app
+        cd app
+        bundle update
+        gem uninstall sqlite3 -v 1.4.0
+        sed -i -e "s/gem 'sqlite3'/gem 'sqlite3' , '~> 1.3.6'/g" Gemfile
+        bundle update
+        rake db:create
+        rails server
+    - name: Install ConnecHub web application
+      become: False
+      shell: |
+        echo 'TODO!'
