--- a/docs/ansible/ror.yml
+++ b/docs/ansible/ror.yml
@@ -1,17 +1,19 @@
-# Source: https://semaphoreci.com/community/tutorials/how-to-deploy-rails-applications-with-ansible-capistrano-and-semaphore
 ---
 - hosts: all
   become: True
   gather_facts: False
+
   pre_tasks:
     - name: Installing Python
       become: False
       raw: sudo apt autoremove -y && sudo apt-get install -y python-minimal python-setuptools
+
   tasks:
     - name: Update and upgrade apt packages
       apt:
         update_cache: yes
         upgrade: dist
+
     - name: Install NodeJs and npm
       shell: |
         apt-get remove --purge -y nodejs npm
@@ -19,7 +21,11 @@
         apt-get autoclean
         apt-get install -f
         apt-get autoremove
-        apt-get install -y nodejs nodejs-dev node-gyp libssl1.0-dev npm
+        apt-get install -y nodejs nodejs-dev node-gyp
+        apt-get install -y libssl1.0-dev npm libreadline6-dev curl zlib1g zlib1g-dev libssl1.0-dev libyaml-dev
+        apt-get install -y apt-transport-https build-essential
+        apt-get install zlib1g-dev libssl-dev
+
     - name: Install system dependencies
       apt: name={{ item }} state=present
       with_items:
@@ -37,54 +43,76 @@
         - software-properties-common
         - libffi-dev
         - htop
-    - name: Download rbenv
-      become: False
-      git:
-        dest: ~/.rbenv  
+
+    # Source: https://github.com/wakproductions/ansible-examples/blob/master/roles/install-ruby241/tasks/main.yml
+    
+    - name: Install dependencies for Ruby 2.3.8
+      apt: name={{ item }} state=present
+      with_items:
+        - build-essential
+        - libyaml-dev
+        - libxml2-dev
+        - libxslt-dev
+        - autoconf
+        - libc6-dev
+        - ncurses-dev
+        - automake
+        - libtool
+        - bison
+        - subversion
+        - zlib1g # http://askubuntu.com/questions/59205/no-such-file-to-load-zlib-error-when-installing-a-gem
+        - zlib1g-dev  # error while installing bundler: http://stackoverflow.com/questions/9727908/cannot-load-such-file-zlib-even-after-using-rvm-pkg-install-zlib
+        - libssl-dev
+
+    - name: Create a working directory
+      file:
+        path:  /tmp/build_ruby
+        state: directory
+        mode: 'u+rwx'
+
+    - name: Download Ruby 2.3.8
+      get_url:
+        url:  https://cache.ruby-lang.org/pub/ruby/2.3/ruby-2.3.8.tar.gz
+        dest: /tmp/build_ruby/ruby-2.3.8.tar.gz
+
+    - name: Unpack Ruby 2.3.8
+      unarchive:
+        src: /tmp/build_ruby/ruby-2.3.8.tar.gz
+        dest: /tmp/build_ruby/
+        remote_src: yes
+
+    - name: Build ruby
+      become: True
+      command: >
+        {{ item }}
+        chdir=/tmp/build_ruby/ruby-2.3.8
+        creates=/usr/local/bin/ruby
+      with_items:
+        - ./configure --enable-shared
+        - make
+        - make install
+
+    - name: Add ruby symlinks
+      file:
+        src: "/usr/local/bin/{{ item }}"
+        dest: "/usr/bin/{{ item }}"
+        state: link
         force: yes
-        repo: https://github.com/rbenv/rbenv.git
-        version: master
-    - name: Install rbenv
-      become: False
-      shell: |
-        echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
-        echo 'eval "$(rbenv init -)"' >> ~/.bashrc
-        exec $SHELL
-    - name: Download Ruby
-      become: False
-      git:
-        repo: https://github.com/rbenv/ruby-build.git
-        version: master
-        dest: ~/.rbenv/plugins/ruby-build
-        force: yes
-        accept_hostkey: yes
-    - name: Install Ruby
-      become: False
-      shell: |
-        echo 'export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
-        exec $SHELL
-        rbenv --version
-        rbenv install 2.6.1
-        rbenv global 2.6.1
-        gem install bundler
-        gem update --system
-    - name: Install Rails
-      become: False
-      shell: |
-        gem install rails -v 5.2.2
-        rbenv rehash
-    - name: Create Rails New App
-      become: False
-      shell: |
-        rails new app
-        cd app
-        bundle update
-        gem uninstall sqlite3 -v 1.4.0
-        sed -i -e "s/gem 'sqlite3'/gem 'sqlite3' , '~> 1.3.6'/g" Gemfile
-        bundle update
-        rake db:create
-        rails server
-    - name: Install ConnecHub web application
-      become: False
-      shell: |
-        echo 'TODO!'
+      with_items:
+        - erb
+        - gem
+        - irb
+        - rake
+        - rdoc
+        - ruby
+
+    - name: Remove the working directory
+      file:
+        path:  /tmp/build_ruby
+        state: absent
+
+    - name: Install bundler
+      gem:
+        name: bundler
+        version: 1.3.5
+        state: present
