--- a/docs/ansible/ror.yml
+++ b/docs/ansible/ror.yml
@@ -5,123 +5,107 @@
 
   pre_tasks:
     - name: Update dependencies via apt-get
-      raw: sudo apt autoremove -y && sudo apt-get update -y
+      raw: sudo apt-get clean && apt-get autoclean && sudo apt autoremove -y && sudo apt-get update -y
 
-    - name: Installing Python & PIP
-      raw: sudo apt-get install -y python-minimal python-setuptools python-pip
+    - name: Installing awscli, https transport, build-essential, Python & PIP
+      raw: sudo apt-get install -y awscli apt-transport-https build-essential python-minimal python-setuptools python-pip software-properties-common
 
-  # tasks:
-  #   - name: Update and upgrade apt packages
-  #     apt:
-  #       update_cache: yes
-  #       upgrade: dist
+  tasks:
+    - name: Install system dependencies
+      apt: name={{ item }} state=present
+      with_items:
+        - git
+        - curl
+        - zlib1g-dev
+        - libreadline-dev
+        - libcurl4-openssl-dev
+        - libffi-dev
+        - libreadline6-dev
+        - curl
+        - zlib1g
+        - zlib1g-dev
+        - zlib1g-dev 
 
-  #   - name: Install NodeJs and npm
-  #     shell: |
-  #       apt-get remove --purge -y nodejs npm
-  #       apt-get clean
-  #       apt-get autoclean
-  #       apt-get install -f
-  #       apt-get autoremove
-  #       apt-get install -y nodejs nodejs-dev node-gyp
-  #       apt-get install -y libssl1.0-dev npm libreadline6-dev curl zlib1g zlib1g-dev libssl1.0-dev libyaml-dev
-  #       apt-get install -y apt-transport-https build-essential
-  #       apt-get install zlib1g-dev libssl-dev
-
-  #   - name: Install system dependencies
-  #     apt: name={{ item }} state=present
-  #     with_items:
-  #       - git-core
-  #       - curl
-  #       - zlib1g-dev
-  #       - build-essential
-  #       - libssl-dev
-  #       - libreadline-dev
-  #       - libyaml-dev
-  #       - libsqlite3-dev
-  #       - libxml2-dev
-  #       - libxslt1-dev
-  #       - libcurl4-openssl-dev
-  #       - software-properties-common
-  #       - libffi-dev
-  #       - htop
-
-  #   # Source: https://github.com/wakproductions/ansible-examples/blob/master/roles/install-ruby241/tasks/main.yml
-    
-  #   - name: Install dependencies for Ruby 2.3.8
-  #     apt: name={{ item }} state=present
-  #     with_items:
-  #       - build-essential
-  #       - libyaml-dev
-  #       - libxml2-dev
-  #       - libxslt-dev
-  #       - autoconf
-  #       - libc6-dev
-  #       - ncurses-dev
-  #       - automake
-  #       - libtool
-  #       - bison
-  #       - subversion
-  #       - zlib1g # http://askubuntu.com/questions/59205/no-such-file-to-load-zlib-error-when-installing-a-gem
-  #       - zlib1g-dev  # error while installing bundler: http://stackoverflow.com/questions/9727908/cannot-load-such-file-zlib-even-after-using-rvm-pkg-install-zlib
-  #       - libssl-dev
-
-  #   - name: Create a working directory
-  #     file:
-  #       path:  /tmp/build_ruby
-  #       state: directory
-  #       mode: 'u+rwx'
-
-  #   - name: Download Ruby 2.3.8
-  #     get_url:
-  #       url:  https://cache.ruby-lang.org/pub/ruby/2.3/ruby-2.3.8.tar.gz
-  #       dest: /tmp/build_ruby/ruby-2.3.8.tar.gz
-
-  #   - name: Unpack Ruby 2.3.8
-  #     unarchive:
-  #       src: /tmp/build_ruby/ruby-2.3.8.tar.gz
-  #       dest: /tmp/build_ruby/
-  #       remote_src: yes
-
-  #   - name: Build ruby
-  #     become: True
-  #     command: >
-  #       {{ item }}
-  #       chdir=/tmp/build_ruby/ruby-2.3.8
-  #       creates=/usr/local/bin/ruby
-  #     with_items:
-  #       - ./configure --enable-shared
-  #       - make
-  #       - make install
-
-  #   - name: Add ruby symlinks
-  #     file:
-  #       src: "/usr/local/bin/{{ item }}"
-  #       dest: "/usr/bin/{{ item }}"
-  #       state: link
-  #       force: yes
-  #     with_items:
-  #       - erb
-  #       - gem
-  #       - irb
-  #       - rake
-  #       - rdoc
-  #       - ruby
-
-  #   - name: Remove the working directory
-  #     file:
-  #       path:  /tmp/build_ruby
-  #       state: absent
-
-  #   - name: Install bundler
-  #     gem:
-  #       name: bundler
-  #       version: 1.3.5
-  #       state: present
-
-    - name: Install AWSCLI and GIT
+    - name: Install NodeJs and npm
       shell: |
-        apt-get install -y awscli git
+        apt-get install -y nodejs nodejs-dev node-gyp npm
+
+    # Source: https://github.com/wakproductions/ansible-examples/blob/master/roles/install-ruby241/tasks/main.yml
+    
+    - name: Install dependencies specificly for Ruby 2.3.8
+      apt: name={{ item }} state=present
+      with_items:
+        - libyaml-dev
+        - libxml2-dev
+        - libxslt-dev
+        - libsqlite3-dev
+        - autoconf
+        - libc6-dev
+        - ncurses-dev
+        - automake
+        - libtool
+        - bison
+        - subversion
+        - zlib1g # http://askubuntu.com/questions/59205/no-such-file-to-load-zlib-error-when-installing-a-gem
+        - zlib1g-dev  # error while installing bundler: http://stackoverflow.com/questions/9727908/cannot-load-such-file-zlib-even-after-using-rvm-pkg-install-zlib
+        - libssl-dev
+
+    - name: Create a working directory
+      file:
+        path:  /tmp/build_ruby
+        state: directory
+        mode: 'u+rwx'
+
+    - name: Download Ruby 2.3.8
+      get_url:
+        url:  https://cache.ruby-lang.org/pub/ruby/2.3/ruby-2.3.8.tar.gz
+        dest: /tmp/build_ruby/ruby-2.3.8.tar.gz
+
+    - name: Unpack Ruby 2.3.8
+      unarchive:
+        src: /tmp/build_ruby/ruby-2.3.8.tar.gz
+        dest: /tmp/build_ruby/
+        remote_src: yes
+
+    - name: Build ruby
+      command: >
+        {{ item }}
+        chdir=/tmp/build_ruby/ruby-2.3.8
+        creates=/usr/local/bin/ruby
+      with_items:
+        - ./configure --enable-shared
+        - make
+        - make install
+
+    - name: Add ruby symlinks
+      file:
+        src: "/usr/local/bin/{{ item }}"
+        dest: "/usr/bin/{{ item }}"
+        state: link
+        force: yes
+      with_items:
+        - erb
+        - gem
+        - irb
+        - rake
+        - rdoc
+        - ruby
+
+    - name: Remove the working directory
+      file:
+        path:  /tmp/build_ruby
+        state: absent
+
+    - name: Install bundler
+      gem:
+        name: bundler
+        version: 1.3.5
+        state: present
+
+    - name: Install nginx
+      apt:
+        name: nginx
+        state: latest
 
     - git_config:
         name: credential.helper
@@ -138,3 +122,5 @@
           dest: /home/ubuntu/ConnecHub
           repo: https://git-codecommit.us-east-1.amazonaws.com/v1/repos/ConnecHub
           version: master
+
+    - name: 
