--- a/docs/ansible/ror.yml
+++ b/docs/ansible/ror.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
-  become: True
-  gather_facts: False
+  become: true
+  gather_facts: false
 
   pre_tasks:
     - name: Update dependencies via apt-get
@@ -26,9 +26,13 @@
         - zlib1g-dev
         - zlib1g-dev 
 
-    - name: Install NodeJs and npm
-      shell: |
-        apt-get install -y nodejs nodejs-dev node-gyp npm
+    - name: Install NodeJs and NPM
+      apt: name={{ item }} state=present
+      with_items:
+        - nodejs 
+        - nodejs-dev 
+        - node-gyp 
+        - npm
 
     # Source: https://github.com/wakproductions/ansible-examples/blob/master/roles/install-ruby241/tasks/main.yml
     
@@ -49,6 +53,8 @@
         - zlib1g # http://askubuntu.com/questions/59205/no-such-file-to-load-zlib-error-when-installing-a-gem
         - zlib1g-dev  # error while installing bundler: http://stackoverflow.com/questions/9727908/cannot-load-such-file-zlib-even-after-using-rvm-pkg-install-zlib
         - libssl-dev
+
+    # Ruby source, build, install, clean up
 
     - name: Create a working directory
       file:
@@ -96,16 +102,13 @@
         path:  /tmp/build_ruby
         state: absent
 
-    - name: Install bundler
-      gem:
-        name: bundler
-        version: 1.3.5
-        state: present
+    # # MySQL client
 
-    - name: Install nginx
-      apt:
-        name: nginx
-        state: latest
+    - name: Install system dependencies
+      apt: name={{ item }} state=present
+      with_items:
+        - mysql-client
+        - libmysqlclient-dev
 
     - git_config:
         name: credential.helper
@@ -113,14 +116,28 @@
 
     - git_config:
         name: credential.UseHttpPath
-        value: True
+        value: true
 
     - git:
-          accept_hostkey: yes
-          remote: origin
-          depth: 1
-          dest: /home/ubuntu/ConnecHub
-          repo: https://git-codecommit.us-east-1.amazonaws.com/v1/repos/ConnecHub
-          version: master
+        accept_hostkey: yes
+        remote: origin
+        depth: 1
+        dest: /home/ubuntu/ConnecHub
+        repo: https://git-codecommit.us-east-1.amazonaws.com/v1/repos/ConnecHub
+        version: master
 
-    - name: 
+    - name: Install bunbler and gems
+      shell: |
+        cd /home/ubuntu/ConnecHub && gem install bundler -v 1.3.5 && ./bin/bundle install
+
+    - name: Change ownership of web app dir
+      file:
+        path: /home/ubuntu/ConnecHub
+        group: ubuntu
+        owner: ubuntu
+        recurse: true
+
+    - name: Start Rails server
+      become: ubuntu
+      shell: |
+        cd /home/ubuntu/ConnecHub && rails server -d --binding 0.0.0.0
