--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,12 @@
-.git
-.dockerignore
-Dockerfile*
-**/*.md
-**/*.log
-/docs/**
-/tmp/**
+**
+
+!/app
+!/config
+!/db
+!/log/.keep
+!/public
+!.env
+!config.ru
+!Gemfile
+!Gemfile.lock
+!Rakefile
