--- a/.env.dist
+++ b/.env.dist
@@ -24,3 +24,5 @@ AWS_REGION=""
 AWS_ACCESS_KEY=""
 AWS_SECRET_KEY=""
 AWS_PEM_KEY_PAIR=""
+AWS_S3_MEDIA_SOURCE_BUCKET=""
+AWS_S3_MEDIA_DISPLAY_BUCKET=""
