FIXED S3 mount logic to use non us-east-1 regions for S3 buckets.

--- a/terraform/s3_mount/s3_mount.yml
+++ b/terraform/s3_mount/s3_mount.yml
@@ -2,6 +2,7 @@
 - hosts: all
   vars:
     APP_ENV:  APP_ENV
+    AWS_REGION: AWS_REGION
     AWS_S3_MEDIA_DISPLAY_BUCKET:  AWS_S3_MEDIA_DISPLAY_BUCKET
     AWS_S3_MEDIA_SOURCE_BUCKET:  AWS_S3_MEDIA_SOURCE_BUCKET
     LOCAL_USER: ubuntu
@@ -45,5 +46,4 @@
         mode: 0775
     - name: Mount SOURCE S3 Bucket
       become_user: ubuntu
-      command: "s3fs {{ AWS_S3_MEDIA_SOURCE_BUCKET }}-{{ APP_ENV }} -o use_cache=/tmp -o multireq_max=5 -o passwd_file=/home/{{ LOCAL_USER }}/.passwd-s3fs /home/{{ LOCAL_USER }}/{{ AWS_S3_MEDIA_SOURCE_BUCKET }}-{{ APP_ENV }}"
-
+      command: "s3fs {{ AWS_S3_MEDIA_SOURCE_BUCKET }}-{{ APP_ENV }} -o use_cache=/tmp -o multireq_max=5 -o passwd_file=/home/{{ LOCAL_USER }}/.passwd-s3fs -o url=https://s3.{{ AWS_REGION }}.amazonaws.com /home/{{ LOCAL_USER }}/{{ AWS_S3_MEDIA_SOURCE_BUCKET }}-{{ APP_ENV }}"
