FIXED _filename error, should stay _file_name.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ bower.json
 /docker/mariadb/data.sql
 /docker/mariadb/data_dir/
 /docs/runbooks/sqlite3_to_mariadb10/**/*.sql
+/media-source-dev/
 
 # Ignore generated docs
 /docs/api/*
