--- a/terraform/web_app/web_app.yml
+++ b/terraform/web_app/web_app.yml
@@ -1,8 +1,14 @@
 ---
 - hosts: all
   vars:
-    database_endpoint_dns: database_endpoint_dns
-    APP_ENV: APP_ENV
+    APP_ENV:  APP_ENV
+    AWS_REGION: AWS_REGION
+    AWS_S3_MEDIA_DISPLAY_BUCKET:  AWS_S3_MEDIA_DISPLAY_BUCKET
+    AWS_S3_MEDIA_SOURCE_BUCKET:  AWS_S3_MEDIA_SOURCE_BUCKET
+
+    LOCAL_USER: ubuntu
+
+    database_address: database_address
   become: true
   gather_facts: false
 
@@ -29,14 +35,14 @@
     - name: Install NodeJs and NPM
       apt:
         pkg:
-          - nodejs 
-          - nodejs-dev 
-          - node-gyp 
+          - nodejs
+          - nodejs-dev
+          - node-gyp
           - npm
         state: present
 
     # Source: https://github.com/wakproductions/ansible-examples/blob/master/roles/install-ruby241/tasks/main.yml
-    
+
     - name: Install dependencies specificly for Ruby 2.3.8
       apt:
         pkg:
@@ -139,14 +145,14 @@
         # after v 1.4.0: --jobs=5
 
     - name: Simple GET operation
-      command: > 
+      command: >
         aws s3 cp s3://connechub-configs/{{ APP_ENV }}/.env /home/ubuntu/ConnecHub/.env
 
     # TODO: Consider using the replace, lineinfile or template module rather than running sed.
 
-    - name: Update RDS DNS address 
+    - name: Update RDS DNS address
       command: >
-        sed -i 's/DB_HOST="mariadb"/DB_HOST="{{ database_endpoint_dns }}"/g' /home/ubuntu/ConnecHub/.env
+        sed -i 's/DB_HOST="mariadb"/DB_HOST="{{ database_address }}"/g' /home/ubuntu/ConnecHub/.env
 
     - name: Change ownership of web app dir
       file:
@@ -155,10 +161,22 @@
         owner: ubuntu
         recurse: true
 
-    # - name: Install and Migrate database
+    # - name: Setup database
     #   become: ubuntu
     #   shell: |
-    #     cd /home/ubuntu/ConnecHub && ./bin/rake db:setup && ./bin/rake db:migrate
+    #     cd /home/ubuntu/ConnecHub && ./bin/rake db:setup
+
+    - name: Migrate database
+      become: ubuntu
+      shell: |
+        cd /home/ubuntu/ConnecHub && ./bin/rake db:migrate
+
+    - name: Start Rails server
+      shell: |
+        pkill ruby
+        cd /home/ubuntu/ConnecHub && rails server -d --binding 0.0.0.0
+
+    # Redirect requests from port 80 to 3000 (Ruby on Rails default server port)
 
     - name: iptables rules
       shell: |
@@ -166,7 +184,50 @@
         iptables-save > ~/iptables.conf
         iptables-restore < ~/iptables.conf
 
-    - name: Start Rails server
-      shell: |
-        pkill ruby
-        cd /home/ubuntu/ConnecHub && rails server -d --binding 0.0.0.0
+    # S3 Bucket mounting (source and display)
+
+    - name: Install system dependencies
+      apt:
+        pkg:
+          - s3fs
+        state: present
+
+    - name: Copy API keys for S3 mounting into EC2 instance
+      copy:
+        src: "../../.passwd-s3fs"
+        dest: "/home/{{ LOCAL_USER }}/.passwd-s3fs"
+        owner: "{{ LOCAL_USER }}"
+        group: "{{ LOCAL_USER }}"
+        mode: 0600
+
+    break these into roles
+
+    - name: Check if media_source_bucket path exists
+      stat:
+        path: /home/{{ LOCAL_USER }}/{{ AWS_S3_MEDIA_SOURCE_BUCKET }}-{{ APP_ENV }}
+      register: media_source_bucket_stats
+
+    - name: Create media_source_* directory if it does not exist
+      file:
+        state: directory
+        path: "/home/{{ LOCAL_USER }}/{{ AWS_S3_MEDIA_SOURCE_BUCKET }}-{{ APP_ENV }}"
+        owner: "{{ LOCAL_USER }}"
+        group: "{{ LOCAL_USER }}"
+        mode: 0775
+      when: media_source_bucket_stats.stat.exists == false
+
+    - name: Mount SOURCE S3 Bucket
+      become_user: "{{ LOCAL_USER }}"
+      # sudo MUST be used with umount
+      # s3fs -d media-source-dev -o use_cache=/tmp -o multireq_max=5 -o passwd_file=/home/ubuntu/.passwd-s3fs -o url=https://s3.us-east-1.amazonaws.com /home/ubuntu/media-source-dev
+      command: >
+        s3fs -d {{ AWS_S3_MEDIA_SOURCE_BUCKET }}-{{ APP_ENV }} -o use_cache=/tmp -o multireq_max=5 -o passwd_file=/home/{{ LOCAL_USER }}/.passwd-s3fs -o url=https://s3.us-east-1.amazonaws.com /home/{{ LOCAL_USER }}/{{ AWS_S3_MEDIA_SOURCE_BUCKET }}-{{ APP_ENV }}
+
+    - name: Mount DISPLAY S3 Bucket
+      become_user: "{{ LOCAL_USER }}"
+      command: >
+        mv ./ConnecHub/public ./ConnecHub/public_old_$(date +%s)
+        mkdir ./ConnecHub/public
+        chmod 0775 ./ConnecHub/public
+        s3fs -d {{ AWS_S3_MEDIA_DISPLAY_BUCKET }}-{{ APP_ENV }} -o use_cache=/tmp -o multireq_max=5 -o passwd_file=/home/ubuntu/.passwd-s3fs ./ConnecHub/public
+      #when: media_display_bucket_stats.stat.exists == false
