fixed syntax error in web_app.yml. ADDED note to ./docs/terraform.md

--- a/terraform/web_app/web_app.yml
+++ b/terraform/web_app/web_app.yml
@@ -200,7 +200,7 @@
         group: "{{ LOCAL_USER }}"
         mode: 0600
 
-    break these into roles
+    # break these into roles
 
     - name: Check if media_source_bucket path exists
       stat:
