--- a/.env.dist
+++ b/.env.dist
@@ -23,6 +23,9 @@ COOKIE_SECRET_KEY_BASE=""
 AWS_REGION=""
 AWS_ACCESS_KEY=""
 AWS_SECRET_KEY=""
-AWS_PEM_KEY_PAIR=""
+AWS_PEM_KEY_PAIR="" # Filename only, not extension
 AWS_S3_MEDIA_SOURCE_BUCKET=""
 AWS_S3_MEDIA_DISPLAY_BUCKET=""
+
+# MISC
+CONTACT_EMAIL=""
