--- a/terraform/web_app/web_app.yml
+++ b/terraform/web_app/web_app.yml
@@ -218,12 +218,27 @@
     - name: Mount media_source_bucket_id to local file system
       become_user: "{{ local_user }}"
       command: >
-        s3fs -d {{ media_source_bucket_id }} -o use_cache=/tmp -o multireq_max=5 -o passwd_file=/home/{{ local_user }}/.passwd-s3fs -o url=https://s3.{{ AWS_REGION }}.amazonaws.com /home/{{ local_user }}/{{ media_source_bucket_id }}
+        s3fs -d {{ media_source_bucket_id }} \
+          -o endpoint={{ AWS_REGION }} \
+          -o use_cache=/tmp \
+          -o multireq_max=5 \
+          -o passwd_file=/home/{{ local_user }}/.passwd-s3fs  \
+          -o url=https://s3.{{ AWS_REGION }}.amazonaws.com \
+          -o nonempty \
+          /home/{{ local_user }}/{{ media_source_bucket_id }}
+
       when: media_source_bucket_stats.stat.exists == false
 
     - name: Mount media_display_bucket_id to local file system
       become_user: "{{ local_user }}"
       shell: |
         cp -rf ./ConnecHub/public ./public_backup
-        s3fs -d {{ media_display_bucket_id }} -o use_cache=/tmp -o multireq_max=5 -o passwd_file=/home/{{ local_user }}/.passwd-s3fs -o url=https://s3.{{ AWS_REGION }}.amazonaws.com /home/{{ local_user }}/ConnecHub/public
+        s3fs -d {{ media_display_bucket_id }} \
+          -o endpoint={{ AWS_REGION }} \
+          -o use_cache=/tmp \
+          -o multireq_max=5 \
+          -o passwd_file=/home/{{ local_user }}/.passwd-s3fs \
+          -o url=https://s3.{{ AWS_REGION }}.amazonaws.com \
+          -o nonempty \
+          /home/{{ local_user }}/ConnecHub/public
         cp -rf /home/{{ local_user }}/public_backup/* /home/{{ local_user }}/ConnecHub/public
